--- a/src/itemEdit.html
+++ b/src/itemEdit.html
@@ -66,11 +66,6 @@
 
                 select.appendChild(option);
               });
-            } else {
-              Notification.notify(
-                'No Buckets available',
-                ' Please create a bucket first.'
-              );
             }
           } catch (error) {
             console.log('Could not load buckets: ', error);
@@ -97,8 +92,8 @@
             {
               identifier: '#bucket',
               type: 'text',
-              required: true,
-              message: 'Bucket must be selected.',
+              required: false,
+              message: 'Bucket does not exist.',
               event: 'change',
               validator: (value) =>
                 Regex.validate(Regex.preset('number', null, null), value),
@@ -162,7 +157,7 @@
               }
 
               // image
-              let image = item.image !== null ? item.image.id : null;
+              let image = item.image ? item.image.id : null;
               if (query('#image').files.length > 0) {
                 const payload = {
                   image: query('#image').files[0],
