--- a/src/timeline.html
+++ b/src/timeline.html
@@ -41,7 +41,7 @@
                 class="sm:mt-1 text-slate-500 sm:text-lg"
                 data-description
               ></div>
-              <div class="pt-4 text-sm sm:text-base">
+              <div class="pt-4 text-sm sm:text-base" data-meta>
                 <a
                   class="font-medium py-1 px-3 rounded-md hover:underline"
                   data-color
@@ -109,25 +109,51 @@
                     key: 'description',
                     textContent: item.description,
                   },
-
                   {
-                    key: 'bucket',
-                    textContent: item.bucket.name,
-                  },
-                  {
-                    key: 'color',
-                    classes: [
-                      `bg-${item.bucket.color}-100`,
-                      `text-${item.bucket.color}-700`,
-                    ],
-                    href: `/item?bucketId=${item.bucket.id}`,
+                    key: 'meta',
+                    remove: true,
                   },
                 ];
 
-                if (item.bucket.icon !== null) {
+                if (item.bucket) {
+                  rules.concat([
+                    {
+                      key: 'bucket',
+                      textContent: item.bucket.name,
+                    },
+                    {
+                      key: 'color',
+                      classes: [
+                        `bg-${item.bucket.color}-100`,
+                        `text-${item.bucket.color}-700`,
+                      ],
+                      href: `/item?bucketId=${item.bucket.id}`,
+                    },
+                    {
+                      key: 'icon',
+                      classes: [`ti-${item.bucket.icon}`],
+                    },
+                  ]);
+                }
+
+                if (item.dateAccomplishedOn) {
                   rules.push({
-                    key: 'icon',
-                    classes: [`ti-${item.bucket.icon}`],
+                    key: 'date',
+                    textContent: `Accomplished on ${Format.parseDate(
+                      item.dateAccomplishedOn
+                    )}`,
+                  });
+                }
+
+                if (item.image) {
+                  rules.push({
+                    key: 'image',
+                    src: `/api/bucket-items/images/${item.id}`,
+                  });
+                } else {
+                  rules.push({
+                    key: 'image-container',
+                    classes: ['hidden'],
                   });
                 }
 
@@ -140,27 +166,6 @@
                           `<a href="/item?labelId=${label.id}" class="text-slate-700 underline-none hover:underline">#${label.name}</a>`
                       )
                       .join(' '),
-                  });
-                }
-
-                if (item.dateAccomplishedOn !== null) {
-                  rules.push({
-                    key: 'date',
-                    textContent: `Accomplished on ${Format.parseDate(
-                      item.dateAccomplishedOn
-                    )}`,
-                  });
-                }
-
-                if (item.image != null) {
-                  rules.push({
-                    key: 'image',
-                    src: `/api/bucket-items/images/${item.id}`,
-                  });
-                } else {
-                  rules.push({
-                    key: 'image-container',
-                    classes: ['hidden'],
                   });
                 }
 
