--- a/src/timeline.html
+++ b/src/timeline.html
@@ -99,7 +99,7 @@
               });
 
               function renderItem(item) {
-                const rules = [
+                let rules = [
                   {
                     key: 'title',
                     textContent: item.title,
@@ -109,14 +109,10 @@
                     key: 'description',
                     textContent: item.description,
                   },
-                  {
-                    key: 'meta',
-                    remove: true,
-                  },
                 ];
 
                 if (item.bucket) {
-                  rules.concat([
+                  rules = rules.concat([
                     {
                       key: 'bucket',
                       textContent: item.bucket.name,
@@ -168,6 +164,11 @@
                       .join(' '),
                   });
                 }
+
+                rules.push({
+                  key: 'meta',
+                  remove: true,
+                });
 
                 Template.render('#timeline-item', rules, '#timeline');
               }
