--- a/src/profile.html
+++ b/src/profile.html
@@ -6,9 +6,19 @@
       <component name="nav" props=";;-active;;;text-blue-500" />
       <component name="pagetitle" props="Edit Profile" />
       <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
+        <div
+          id="profile-picture-container"
+          class="mx-auto mb-4 flex justify-center items-center w-20 h-20 border-2 rounded-full border-slate-200 overflow-hidden"
+        >
+          <i
+            id="profile-picture-icon"
+            class="ti ti-user text-4xl text-slate-700"
+          ></i>
+        </div>
         <component name="input-text" props="text;name;Name;;" />
         <component name="input-text" props="email;email;Email;;" />
         <component name="input-text" props="password;password;Password;;" />
+        <component name="input-file" props="picture;Picture;Optional" />
         <div class="flex gap-x-3">
           <component name="button" props="Cancel;" />
           <component name="button-submit" props="Update;profile" />
@@ -22,6 +32,11 @@
 
             val('#name', profile.name);
             val('#email', profile.email);
+
+            if (profile.profilePicture) {
+              query('#profile-picture-contaner').innerHTML =
+                '<img id="profile-picture" src="/api/avatars/profile-pictur" />';
+            }
 
             const watchers = [
               {
@@ -56,6 +71,17 @@
             query('form').addEventListener('submit', async (e) => {
               if (Form.isValid()) {
                 e.preventDefault();
+
+                // picture
+                let picture = null;
+                if (query('#picture').files.length > 0) {
+                  const payload = {
+                    image: query('#picture').files[0],
+                  };
+
+                  const result = await API.postAvatarPicture(payload);
+                  picture = result.id;
+                }
 
                 const payload = {
                   name: val('#name'),
