--- a/src/bucketList.html
+++ b/src/bucketList.html
@@ -33,8 +33,8 @@
           <div class="hidden sm:block">
             <i class="ti" data-icon></i>
           </div>
-          <div class="flex justify-end gap-x-2 sm:gap-x-4">
-            <component name="button" props="Edit;;edit" />
+          <div class="flex justify-end gap-x-1 sm:gap-x-2">
+            <component name="button-edit" props="Edit;;edit" />
             <component name="button-delete" props="Delete;;delete" />
           </div>
         </div>
@@ -74,6 +74,10 @@
                     ],
                   },
                   {
+                    key: 'icon',
+                    classes: [`ti-${bucket.icon}`],
+                  },
+                  {
                     key: 'edit',
                     href: `/bucket/edit?id=${bucket.id}`,
                   },
@@ -90,13 +94,6 @@
                     },
                   },
                 ];
-
-                if (bucket.icon !== null) {
-                  rules.push({
-                    key: 'icon',
-                    classes: [`ti-${bucket.icon}`],
-                  });
-                }
 
                 Template.render('#bucket', rules, '#buckets');
               });
