--- a/src/itemList.html
+++ b/src/itemList.html
@@ -5,35 +5,35 @@
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
       <component name="nav" props="-active;;;text-blue-500;;" />
       <component name="pagetitle" props="Bucket Items" />
-      <div
-        class="max-w-7xl mx-auto p-4 sm:px-6 lg:px-8 flex items-center gap-x-4"
-      >
-        <div>
-          <label
-            for="filter-bucket"
-            class="block text-sm font-medium text-slate-700 pr-2"
-            >Filter by Bucket:
-          </label>
-          <div class="w-52 max-w-60">
-            <select
-              id="filter-bucket"
-              name="filter-bucket"
-              class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-slate-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md text-slate-500"
-            ></select>
+      <div class="max-w-7xl mx-auto p-4 sm:px-6 lg:px-8">
+        <div class="max-w-xl flex items-center gap-x-4">
+          <div class="flex-1">
+            <label
+              for="filter-bucket"
+              class="block text-sm font-medium text-slate-700 pr-2"
+              >Filter by Bucket:
+            </label>
+            <div class="w-full max-w-60">
+              <select
+                id="filter-bucket"
+                name="filter-bucket"
+                class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-slate-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md text-slate-500"
+              ></select>
+            </div>
           </div>
-        </div>
-        <div>
-          <label
-            for="filter-label"
-            class="block text-sm font-medium text-slate-700 pr-2"
-            >Filter by Label:
-          </label>
-          <div class="w-52 max-w-60">
-            <select
-              id="filter-label"
-              name="filter-label"
-              class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-slate-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md text-slate-500"
-            ></select>
+          <div class="flex-1">
+            <label
+              for="filter-label"
+              class="block text-sm font-medium text-slate-700 pr-2"
+              >Filter by Label:
+            </label>
+            <div class="max-w-60">
+              <select
+                id="filter-label"
+                name="filter-label"
+                class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-slate-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md text-slate-500"
+              ></select>
+            </div>
           </div>
         </div>
       </div>
@@ -42,21 +42,29 @@
         class="max-w-7xl mx-auto p-4 sm:px-6 lg:px-8 divide-y divide-slate-100"
       >
         <div
-          class="grid grid-cols-15 gap-x-4 p-2 px-3 sm:p-3 items-center font-bold text-sm"
+          class="grid grid-cols-6 sm:grid-cols-9 md:grid-cols-13 lg:grid-cols-15 gap-x-4 p-2 px-3 sm:p-3 items-center font-bold text-sm"
         >
           <a class="text-center" id="toggle-completed">
             <i id="toggle-completed-icon" class="ti text-lg"></i>
           </a>
-          <a class="col-span-4 hover:underline" id="sort-title">Title</a>
+          <a class="col-span-3 sm:col-span-4 hover:underline" id="sort-title"
+            >Title</a
+          >
           <a class="col-span-2 hover:underline" id="sort-bucket">Bucket</a>
-          <div class="col-span-2">Labels</div>
-          <a class="col-span-2 hover:underline" id="sort-date-to-accomplish">
+          <div class="hidden lg:block col-span-2">Labels</div>
+          <a
+            class="hidden md:block col-span-2 hover:underline"
+            id="sort-date-to-accomplish"
+          >
             Accomplish By
           </a>
-          <a class="col-span-2 hover:underline" id="sort-date-accomplished-on">
+          <a
+            class="hidden md:block col-span-2 hover:underline"
+            id="sort-date-accomplished-on"
+          >
             Accomplished On
           </a>
-          <div class="col-span-2 text-right">Actions</div>
+          <div class="hidden sm:block col-span-2 text-right">Actions</div>
         </div>
       </div>
       <template id="create-button">
@@ -66,11 +74,16 @@
         <div class="mx-4 p-4 sm:p-6 text-center">No bucket items found.</div>
       </template>
       <template id="item">
-        <div class="grid grid-cols-15 gap-x-4 p-2 px-3 sm:p-3 items-center">
+        <div
+          class="grid grid-cols-6 sm:grid-cols-9 md:grid-cols-13 lg:grid-cols-15 gap-x-4 p-2 px-3 sm:p-3 items-center"
+        >
           <button data-complete>
             <i data-completed class="ti text-lg"></i>
           </button>
-          <a data-title class="col-span-4 truncate hover:underline"></a>
+          <a
+            data-title
+            class="col-span-3 sm:col-span-4 truncate hover:underline"
+          ></a>
           <div class="col-span-2 text-sm">
             <a
               class="inline-block max-w-full font-medium py-1 px-2 rounded-md truncate hover:underline"
@@ -82,17 +95,17 @@
           </div>
           <div
             data-labels
-            class="col-span-2 truncate text-slate-500 text-sm"
+            class="hidden lg:block col-span-2 truncate text-slate-500 text-sm"
           ></div>
           <div
             data-to-accomplish
-            class="col-span-2 text-slate-500 text-sm"
+            class="hidden md:block col-span-2 text-slate-500 text-sm"
           ></div>
           <div
             data-accomplished-on
-            class="col-span-2 text-slate-500 text-sm"
+            class="hidden md:block col-span-2 text-slate-500 text-sm"
           ></div>
-          <div class="col-span-2 flex justify-end gap-x-1 sm:gap-x-2">
+          <div class="hidden sm:flex col-span-2 justify-end gap-x-1 sm:gap-x-2">
             <component name="button-edit" props="Edit;;edit" />
             <component name="button-delete" props="Delete;;delete" />
           </div>
