Fix no-buckets styling

--- a/src/bucketList.html
+++ b/src/bucketList.html
@@ -25,11 +25,7 @@
         />
       </template>
       <template id="no-buckets">
-        <div
-          class="mx-4 border rounded-md sm:rounded-xl p-4 sm:p-6 text-center"
-        >
-          No buckets yet.
-        </div>
+        <div class="mx-4 p-4 sm:p-6 text-center">No buckets yet.</div>
       </template>
       <template id="bucket">
         <div
