--- a/src/profile.html
+++ b/src/profile.html
@@ -4,7 +4,7 @@
   <body>
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
       <component name="nav" props=";;-active;;;text-blue-500" />
-      <component name="pagetitle" props="Edit Profile" />
+      <component name="pagetitle-center" props="Edit Profile" />
       <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
         <div
           id="profile-picture-container"
