--- a/src/bucketList.html
+++ b/src/bucketList.html
@@ -63,6 +63,12 @@
         }
 
         ready(async function () {
+          validateLogin((result) => {
+            if (!result) {
+              redirect('/login');
+            }
+          });
+
           try {
             const filter = new Filter({
               sort: {
