--- a/src/login.html
+++ b/src/login.html
@@ -11,6 +11,12 @@
         <div class="flex gap-x-3">
           <component name="button-submit" props="Login" />
         </div>
+        <div class="mt-4 text-sm"></div>
+        <a
+          href="/user/register"
+          class="block text-slate-500 text-center hover:underline"
+          >Register</a
+        >
       </form>
       <component name="footer" />
       <script>
@@ -56,7 +62,7 @@
               }
             }
           });
-        }, false);
+        });
       </script>
     </div>
   </body>
