--- a/src/register.html
+++ b/src/register.html
@@ -15,6 +15,12 @@
       <component name="footer" />
       <script>
         ready(async function () {
+          validateLogin((result) => {
+            if (!result) {
+              redirect('/login');
+            }
+          });
+
           const watchers = [
             {
               identifier: '#name',
