--- a/src/timeline.html
+++ b/src/timeline.html
@@ -68,6 +68,12 @@
       </template>
       <script>
         ready(async function () {
+          validateLogin((result) => {
+            if (!result) {
+              redirect('/login');
+            }
+          });
+
           try {
             const items = await API.getBucketItems('?completed=true');
             if (items.length > 0) {
