--- a/src/itemEdit.html
+++ b/src/itemEdit.html
@@ -32,6 +32,12 @@
       <component name="footer" />
       <script>
         ready(async function () {
+          validateLogin((result) => {
+            if (!result) {
+              redirect('/login');
+            }
+          });
+
           let item = null;
 
           try {
