Fix profile picture

--- a/src/profile.html
+++ b/src/profile.html
@@ -40,8 +40,8 @@
             val('#email', profile.email);
 
             if (profile.profilePicture) {
-              query('#profile-picture-contaner').innerHTML =
-                '<img id="profile-picture" src="/api/avatars/profile-pictur" />';
+              query('#profile-picture-container').innerHTML =
+                '<img id="profile-picture" class="w-20 h-20 object-cover" src="/api/avatars/profile-picture" />';
             }
 
             const watchers = [
@@ -108,6 +108,7 @@
               }
             });
           } catch (error) {
+            console.log(error);
             Notification.notify(
               'Something went wrong',
               'Could not load profile.'
