--- a/src/login.html
+++ b/src/login.html
@@ -3,6 +3,7 @@
   <component name="head" />
   <body>
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
+      <component name="notifications" />
       <component name="pagetitle-center" props="Login" />
       <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
         <component name="input-text" props="email;email;Email;;" />
